// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compressible tests Two labels, one plugging in SuperHeader instead 1`] = `
<View>
  <View>
    <Text
      style={
        {
          "color": "purple",
          "fontSize": 24,
          "fontWeight": "700",
        }
      }
    >
      Super Header
    </Text>
    <Text
      style={
        {
          "color": "gray",
          "fontSize": 12,
          "fontWeight": "300",
        }
      }
    >
      Normal caption
    </Text>
  </View>
  <View>
    <Text
      style={
        {
          "color": "blue",
          "fontSize": 16,
          "fontWeight": "700",
        }
      }
    >
      Normal Header
    </Text>
    <Text
      style={
        {
          "color": "gray",
          "fontSize": 12,
          "fontWeight": "300",
        }
      }
    >
      Another normal caption
    </Text>
  </View>
</View>
`;

exports[`compressible tests Two labels, one with caption and one without 1`] = `
<View>
  <Text
    style={
      {
        "color": "blue",
        "fontSize": 16,
        "fontWeight": "700",
      }
    }
  >
    Header1
  </Text>
  <View>
    <Text
      style={
        {
          "color": "blue",
          "fontSize": 16,
          "fontWeight": "700",
        }
      }
    >
      Header2
    </Text>
    <Text
      style={
        {
          "color": "gray",
          "fontSize": 12,
          "fontWeight": "300",
        }
      }
    >
      Caption2
    </Text>
  </View>
</View>
`;
